--- a/webconsole-plugins/packageadmin/src/main/resources/OSGI-INF/l10n/bundle_de.properties
+++ b/webconsole-plugins/packageadmin/src/main/resources/OSGI-INF/l10n/bundle_de.properties
@@ -1,4 +1,4 @@
-ï»¿#Licensed to the Apache Software Foundation (ASF) under one or more
+#Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
 # this work for additional information regarding copyright ownership.
 # The ASF licenses this file to You under the Apache License, Version 2.0
@@ -34,9 +34,10 @@ find.tip=Geben Sie eine Liste von Paket- oder Klassennamen
 header.package.name=Pakete
 header.package.ver=Version
 header.exporting.bundle=Exportiert von
-header.maven.deps=Maven AbhÃ¤ngigkeit
+header.maven.deps=Maven Abhängigkeit
 no.exporters.found=Keine exportierenden Bundle(s) gefunden
-no.maven.found=Keine Maven-Informationen verfÃ¼gbar
+no.uses.found=Keine importierenden Bundle(s) gefunden
+no.maven.found=Keine Maven-Informationen verfügbar
 status.initial=Bitte geben Sie eine Liste von Paket- oder Klassen-Namen und klicken Sie auf die Suche-Taste.
 status.find={0} Ergebnis(se) gefunden
 
