--- a/main/doc/changelog.txt
+++ b/main/doc/changelog.txt
@@ -1,3 +1,10 @@
+Changes from 4.4.0 to 4.4.1
+---------------------------
+** Improvement
+    * Update to latest framework version 4.4.1
+    * Update to latest obr version 2.0.2
+    * Update to gogo commands 0.14.0 and runtime 0.12.1
+
 Changes from 4.2.1 to 4.4.0
 ---------------------------
 
