--- a/webconsole-l10n/bg/src/main/resources/OSGI-INF/l10n/bundle_bg.properties
+++ b/webconsole-l10n/bg/src/main/resources/OSGI-INF/l10n/bundle_bg.properties
@@ -81,7 +81,8 @@ services.usingBundles=Използващи бъндъли
 services.info.name=Използвани услуги
 services.info.descr=Тази услуга се използва от избраният бъндъл. Кликнете за да видите повече детайли в плъгин "Услуги"
 services.info.key=Услуга #{0} от тип(ове) {1}
-
+services.filter.help=LDAP филтър който се прилага спрямо регистрационните пропъртита на услугата.
+services.filter.apply=Прилагане на филтъра
 
 # Log plugin
 logs.pluginTitle=Журнал
@@ -119,6 +120,7 @@ bundles.name.symb=Символно име
 bundles.category=Категория
 bundles.status=Статус
 bundles.actions=Действия
+
 # bundle details
 bundles.location=Bundle Location
 bundles.lastMod=Последна промяна
@@ -159,7 +161,6 @@ bundles.state.unknown=Непознат статус: {0}
 bundles.state.fragment=Фрагмент
 # action error
 bundles.error.title=Грешка при изпълнение на операцията!
-
 
 # Configuration plugin
 configMgr.pluginTitle=Конфигурации
@@ -240,6 +241,11 @@ metadata.username.description=Името на потребителя, който
 metadata.password.name=Парола
 metadata.password.description=Паролата която се изисква от потребителя, за да се позволи той да използва административната конзола.\
  Този атрибут се игнорира ако се използва външен WebConsoleSecurityProvider за авторизация.
+
+metadata.category.name=Категория по подразбиране
+metadata.category.description=Категорията (име на меню), която се ползва по подразбиране когато плъгин е регистриран без\
+ пропъртито felix.webconsole.category или без да имплементира AbstractWebConsole.getCategory() метода. Ако не укажете\
+ стойност, се ползва "Main".  
 
 metadata.plugins.name=Добавки
 metadata.plugins.description=Изберете активните добавки
