--- a/scrplugin/generator/changelog.txt
+++ b/scrplugin/generator/changelog.txt
@@ -1,3 +1,11 @@
+Changes from 1.11.0 to 1.10.0
+----------------------------
+** Improvement
+    * [FELIX-4586] - A field must be volatile if methods are generated for a dynamic reference
+** Bug
+    * [FELIX-4296] - Cannot deactivate service interface detection in DS annotations
+
+
 Changes from 1.10.0 to 1.9.0
 ----------------------------
 ** Improvement
