--- a/scrplugin/maven-scr-plugin/changelog.txt
+++ b/scrplugin/maven-scr-plugin/changelog.txt
@@ -1,3 +1,9 @@
+Changes from 1.20,0 to 1.19.0
+-----------------------------
+** Bug
+    * [FELIX-4595] - Passing configuration to the maven-bundle-plugin does not always work
+
+
 Changes from 1.19.0 to 1.17.0
 -----------------------------
 ** Improvement
