Preparing for new release.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1724810 13f79535-47bb-0310-9956-ffa450edef68

--- a/deploymentadmin/autoconf/changelog.txt
+++ b/deploymentadmin/autoconf/changelog.txt
@@ -1,3 +1,14 @@
+Release 0.1.6
+-------------
+
+FELIX-4912 Upgrade autoconf to Dependency Manager 4
+
+Release 0.1.5
+-------------
+
+FELIX-3355 Autoconf can't find Metatype service
+FELIX-4314 Split service registration to solve visibility issue in autoconf
+
 Release 0.1.4
 -------------
 
