Preparing changelog for new release.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1724983 13f79535-47bb-0310-9956-ffa450edef68

--- a/deploymentadmin/autoconf/changelog.txt
+++ b/deploymentadmin/autoconf/changelog.txt
@@ -1,3 +1,8 @@
+Release 0.1.8
+-------------
+
+FELIX-5169 AutoConf incorrectly references constants from DeploymentAdmin
+
 Release 0.1.6
 -------------
 
