Added comments. Cleaned hello sample.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1727908 13f79535-47bb-0310-9956-ffa450edef68

--- a/dependencymanager/org.apache.felix.dependencymanager.lambda.samples/src/org/apache/felix/dm/lambda/samples/hello/README
+++ b/dependencymanager/org.apache.felix.dependencymanager.lambda.samples/src/org/apache/felix/dm/lambda/samples/hello/README
@@ -21,3 +21,9 @@ To see logs, just type this under gogo shell:
 
 g! log info|grep hello.annot
 
+and you should see the following logs:
+
+2016.02.01 10:12:02 INFO - Bundle: org.apache.felix.dependencymanager.lambda.samples.hello - ServiceProviderImpl.hello
+2016.02.01 10:12:02 INFO - Bundle: org.apache.felix.dependencymanager.lambda.samples.hello - ServiceConsumer.start: calling service.hello()
+
+
