FELIX-5173 - Metatype service's BundleResources ignore properties provided by fragment bundles
- use getResource instead of getEntry to allow fragments to supply localization resources.



git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1728499 13f79535-47bb-0310-9956-ffa450edef68

--- a/metatype/changelog.txt
+++ b/metatype/changelog.txt
@@ -1,3 +1,10 @@
+Changes from 1.1.2 to ...
+-------------------------
+
+** Bug
+    * [FELIX-5173] - Metatype service's BundleResources ignore properties provided by fragment bundles
+
+
 Changes from 1.1.0 to 1.1.2
 ---------------------------
 
@@ -18,6 +25,7 @@ Changes from 1.0.10 to 1.0.12
 
 ** Improvement
 	* [FELIX-4649] - Get MetaTypeInformation while bundle is starting
+	* [FELIX-4687] - Support v. 1.3 metatype namespace
 
 ** Bug
 	* [FELIX-4644] - Designates with multiple Objects
