FELIX-5118 - Exception when running on jdk9-ea. Apply slightly modified patch from Omair Majid
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1743314 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/org.apache.felix.scr.generator/changelog.txt
+++ b/tools/org.apache.felix.scr.generator/changelog.txt
@@ -1,3 +1,9 @@
+Changes from 1.14.0 to 1.13.0 
+-----------------------------
+** Bug
+    * [FELIX-5118] - Exception when running on jdk9-ea
+
+
 Changes from 1.13.0 to 1.12.0 
 -----------------------------
 ** Improvement
